--- a/config/locales/po/ca/api.po
+++ b/config/locales/po/ca/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-10 12:32-0609\n"
-"PO-Revision-Date: 2014-11-10 12:32-0609\n"
+"POT-Creation-Date: 2014-12-19 09:29-0609\n"
+"PO-Revision-Date: 2014-12-19 09:29-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: ca <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -63,6 +63,9 @@ msgstr "{name} ha posat un marcador a <b>{reference_human}</b>"
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "Prepara't pel Nadal amb un Pla d'Advent de lectura de la Bíblia"
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "Al 2015 llegeix la Bíblia cada dia. Els Plans t'ajuden!"
+
 msgid "moment.friendship.self.title"
 msgstr "Ara ets amic de <b>{friend_name}</b>"
 
@@ -107,6 +110,9 @@ msgstr "Mira la <i>Sèrie Bíblica</i> aquest vespre!"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>Sèrie Bíblica</i>"
+
+msgid "moment.system.christmas.title"
+msgstr "Comparteix la bona nova: el Salvador ha nascut!"
 
 msgid "moment.system.find_friends.title"
 msgstr "L'App de la Bíblia és encara millor amb Amics. Cerca en els teus Contactes per trobar-hi Amics."
