--- a/config/locales/po/es/api.po
+++ b/config/locales/po/es/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-10 12:32-0609\n"
-"PO-Revision-Date: 2014-11-10 12:32-0609\n"
+"POT-Creation-Date: 2014-12-19 09:30-0609\n"
+"PO-Revision-Date: 2014-12-19 09:30-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: es <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -63,6 +63,9 @@ msgstr "{name} marcó <b>{reference_human}</b>"
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "Prepárese para la Navidad con un Plan de Lectura sobre el Adviento"
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "Lea la Biblia a diario en 2015. ¡Los Planes ayudan!"
+
 msgid "moment.friendship.self.title"
 msgstr "Usted es ahora amigo de <b>{friend_name}</b>"
 
@@ -110,6 +113,9 @@ msgstr "¡Vea la <i>Serie La Biblia</i> esta noche!"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>Serie La Biblia</i>"
+
+msgid "moment.system.christmas.title"
+msgstr "Comparte la noticia: ¡el Salvador ha nacido!"
 
 msgid "moment.system.find_friends.title"
 msgstr "La Biblia App es aún mejor con Amigos. Busque en sus Contactos para encontrar Amigos."
