--- a/config/locales/po/fr/api.po
+++ b/config/locales/po/fr/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-17 13:13-0609\n"
-"PO-Revision-Date: 2014-11-17 13:13-0609\n"
+"POT-Creation-Date: 2014-12-19 09:30-0609\n"
+"PO-Revision-Date: 2014-12-19 09:30-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: fr <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
@@ -63,6 +63,9 @@ msgstr "{name} a mis <b>{reference_human}</b> en favori"
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "Préparez-vous pour Noël avec un Plan de Lecture de l'Avent."
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "Lisez la Bible en 2015 grâce aux plans!"
+
 msgid "moment.friendship.self.title"
 msgstr "Vous êtes maintenant ami avec  <b>{friend_name}</b>"
 
@@ -107,6 +110,9 @@ msgstr "Regardez les <i>Séries Bibliques</i> ce soir !"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>Séries Bibliques</i>"
+
+msgid "moment.system.christmas.title"
+msgstr "Répandez la Bonne Nouvelle: le Sauveur est né!"
 
 msgid "moment.system.find_friends.title"
 msgstr "La Bible App est encore mieux avec des amis. Recherchez des amis parmi vos contacts."
