--- a/config/locales/po/hu/api.po
+++ b/config/locales/po/hu/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-10 12:32-0609\n"
-"PO-Revision-Date: 2014-11-10 12:32-0609\n"
+"POT-Creation-Date: 2014-12-19 09:30-0609\n"
+"PO-Revision-Date: 2014-12-19 09:30-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: hu <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
@@ -63,6 +63,9 @@ msgstr "{name} könyvjelzővel megjelölte a/z <b>{reference_human}</b>"
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "Készülj fel a karácsonyra egy adventi olvasási tervvel"
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "Olvasd naponta a Bibliát 2015-ban. A tervek segítenek!"
+
 msgid "moment.friendship.self.title"
 msgstr "<b>{friend_name}</b> mostantól a barátod lett"
 
@@ -107,6 +110,9 @@ msgstr "Nézd meg ma este a  <i>Biblia sorozatot</i>!"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>Biblia sorozat<i>"
+
+msgid "moment.system.christmas.title"
+msgstr "Oszd meg az örömhírt: a Megváltó megszületett!"
 
 msgid "moment.system.find_friends.title"
 msgstr "Barátokkal a Biblia alkalmazás is jobb. Keress barátokat a címjegyzékben."
