--- a/config/locales/po/ko/api.po
+++ b/config/locales/po/ko/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-10 12:32-0609\n"
-"PO-Revision-Date: 2014-11-10 12:32-0609\n"
+"POT-Creation-Date: 2014-12-19 09:29-0609\n"
+"PO-Revision-Date: 2014-12-19 09:29-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: ko <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
@@ -63,6 +63,9 @@ msgstr "{name}님이 <b>{reference_human}</b>에 책갈피를 표시했습니다
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "대강절 묵상계획을 시작으로 성탄절을 준비해보세요,"
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "읽기계획을 통해 2015년에는 성경을 매일 읽으세요 !"
+
 msgid "moment.friendship.self.title"
 msgstr "이제 <b>{friend_name}</b>님과 친구입니다"
 
@@ -110,6 +113,9 @@ msgstr "오늘밤 <i>성경 시리즈</i>를 시청해 보세요!"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>성경 시리즈</i>"
+
+msgid "moment.system.christmas.title"
+msgstr "기쁜 소식을 전하세요: 구주가 나셨습니다!"
 
 msgid "moment.system.find_friends.title"
 msgstr "친구기능을 추가함으로 성경 앱이 더 좋아졌습니다.  연락처를 통해서 친구들을 찾아보세요."
