--- a/config/locales/po/nl/api.po
+++ b/config/locales/po/nl/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-10 12:32-0609\n"
-"PO-Revision-Date: 2014-11-10 12:32-0609\n"
+"POT-Creation-Date: 2014-12-19 09:30-0609\n"
+"PO-Revision-Date: 2014-12-19 09:30-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: nl <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -63,6 +63,9 @@ msgstr "{name} heeft <b>{reference_human}</b> een bladwijzer aangemaakt"
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "Bereid je voor op Kerst met een Advent Bijbelplan"
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "Lees in 2015 de Bijbel, dankzij leesplannen!"
+
 msgid "moment.friendship.self.title"
 msgstr "Je bent nu bevriend met <b>{friend_name}</b>"
 
@@ -107,6 +110,9 @@ msgstr "Kijk vanavond naar de <i>Bijbel Serie</i>!"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>Bijbel Serie</i>"
+
+msgid "moment.system.christmas.title"
+msgstr "Deel het goede nieuws: de Redder is geboren!"
 
 msgid "moment.system.find_friends.title"
 msgstr "De Bijbel App is nog mooier met vrienden. Doorzoek jouw contacten om vrienden te vinden."
