--- a/config/locales/po/no/api.po
+++ b/config/locales/po/no/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-10 12:32-0609\n"
-"PO-Revision-Date: 2014-11-10 12:32-0609\n"
+"POT-Creation-Date: 2014-12-19 09:30-0609\n"
+"PO-Revision-Date: 2014-12-19 09:30-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: nb_NO <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -63,6 +63,9 @@ msgstr "{name} bokmerket <b>{reference_human}</b>"
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "Gjør deg klar for julen med en leseplan for advent"
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "Les bibelen daglig i 2015. Leseplaner hjelper!"
+
 msgid "moment.friendship.self.title"
 msgstr "Du er nå venn med <b>{friend_name}</b>"
 
@@ -107,6 +110,9 @@ msgstr "Se <i>Bibel Series</i> i kveld!"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>Bibel Series</i>"
+
+msgid "moment.system.christmas.title"
+msgstr "Del de gode nyhetene: Frelseren er født!"
 
 msgid "moment.system.find_friends.title"
 msgstr "Bibel-appen er enda bedre sammen med venner. Søk gjennom kontaktene dine for å finne venner."
