--- a/config/locales/po/pt/api.po
+++ b/config/locales/po/pt/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-10 12:32-0609\n"
-"PO-Revision-Date: 2014-11-10 12:32-0609\n"
+"POT-Creation-Date: 2014-12-19 09:29-0609\n"
+"PO-Revision-Date: 2014-12-19 09:29-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: pt <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -63,6 +63,9 @@ msgstr "{name} marcou como favorito <b>{reference_human}</b>"
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "Prepare-se para a chegada do Natal com um Plano Bíblico do Advento"
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "Leia a Bíblia diariamente em 2015. Planos ajudam!"
+
 msgid "moment.friendship.self.title"
 msgstr "Você agora é amigo de <b>{friend_name}</b>"
 
@@ -110,6 +113,9 @@ msgstr "Assista a <i>Série Bíblica</i> esta noite!"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>Série Bíblica </i>"
+
+msgid "moment.system.christmas.title"
+msgstr "Partilhe as boas novas: o Salvador nasceu!"
 
 msgid "moment.system.find_friends.title"
 msgstr "O App da Bíblia é ainda melhor com Amigos. Procure seus Contatos para encontrar Amigos."
