--- a/config/locales/po/sk/api.po
+++ b/config/locales/po/sk/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-10 12:32-0609\n"
-"PO-Revision-Date: 2014-11-10 12:32-0609\n"
+"POT-Creation-Date: 2014-12-19 09:30-0609\n"
+"PO-Revision-Date: 2014-12-19 09:30-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: sk <LL@li.org>\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
@@ -63,6 +63,9 @@ msgstr "Používateľ {name} pridal <b>{reference_human}</b> medzi svoje zálož
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "Pripravte sa na Vianoce s adventným plánom čítania Biblie"
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "Čítajte Bibliu denne aj v roku 2015. Plány pomáhajú!"
+
 msgid "moment.friendship.self.title"
 msgstr "Odteraz ste priateľom s používateľom <b>{friend_name}</b>"
 
@@ -107,6 +110,9 @@ msgstr "Pozrite si <i>Biblické príbehy</i> ešte dnes!"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>Biblické príbehy</i>"
+
+msgid "moment.system.christmas.title"
+msgstr "Zdieľajte dobrú zvesť: narodil sa Spasiteľ!"
 
 msgid "moment.system.find_friends.title"
 msgstr "Aplikácia Biblia je oveľa lepšia s priateľmi. Nájdite priateľov medzi svojimi kontaktmi."
