--- a/config/locales/po/sv/api.po
+++ b/config/locales/po/sv/api.po
@@ -8,8 +8,8 @@ msgstr ""
 "#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion) 1.0\n"
 "Report-Msgid-Bugs-To: developers@youversion.com\n"
-"POT-Creation-Date: 2014-11-10 12:32-0609\n"
-"PO-Revision-Date: 2014-11-10 12:32-0609\n"
+"POT-Creation-Date: 2014-12-19 09:30-0609\n"
+"PO-Revision-Date: 2014-12-19 09:30-0609\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -63,6 +63,9 @@ msgstr "{name} har bokmärkt <b>{reference_human}</b>"
 msgid "moment.client_side.reading_plan_carousel.advent.title"
 msgstr "Förbered dig inför jul med en läsplan om advent"
 
+msgid "moment.client_side.reading_plan_carousel.new_year.title"
+msgstr "Läs Bibeln dagligen under 2015. Planer hjälper!"
+
 msgid "moment.friendship.self.title"
 msgstr "Du är nu vän med <b>{friend_name}</b>"
 
@@ -107,6 +110,9 @@ msgstr "Titta på <i>bibelserien</i> i kväll!"
 
 msgid "moment.system.bible_series_promo.title"
 msgstr "<i>Bibelserier</i>"
+
+msgid "moment.system.christmas.title"
+msgstr "Sprid den glada nyhetern: Frälsaren är född!"
 
 msgid "moment.system.find_friends.title"
 msgstr "Bibelappen är ännu bättre med vänner. Sök bland dina kontakter för att hitta vänner."
